--- a/README
+++ b/README
@@ -14,8 +14,7 @@ rackup
 * add messages
 * endpoints documentation inside README
 * is all spec-file with '_spec' ?
-* rubocop fixs
+* rubocop fixs -a
 * seeds
 * test
 * post in Medium and RubyFlow
-* json optimizing like jbuilder
