--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 ## Information
+Pet-app with Roda and Mongoid.
 
 ## Run
 ```bash
@@ -16,9 +17,17 @@ rackup
 ```
 Routes-list are inside: routes.json
 
+
+## Folder Structure
+handlers/ - handlers for modules
+models/ - here is models
+modules/ - here is parts of main app
+services/ - here is services
+app.rb - Main application
+init.rb - initializations file
+
 ## TODO:
 * endpoints documentation inside README
-* rubocop fixs -a
 * seeds
 * test wrk
 * post in Medium and RubyFlow
